--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monitor</title>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&family=Roboto:wght@300;500&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Space Grotesk', sans-serif;
@@ -17,17 +18,93 @@
             background-size: cover;
             background-position: center;
         }
+        .main-container {
+            display: flex;
+            gap: 20px;
+            justify-content: center;
+            align-items: flex-start;
+            width: 90%;
+            max-width: 1200px;
+        }
         .container {
             text-align: center;
             padding: 20px;
-            border-radius: 10px;
-            background: rgba(255, 255, 255, 0.8); /* Fondo blanco semi-transparente */
-            max-width: 100%;
+            border-radius: 30px;
+            background: rgba(255, 255, 255, 0.9);
             box-sizing: border-box;
-            position: relative; /* Para posicionar el botón de cerrar sesión */
+            width: 400px;
+            max-width: 400px;
+        }
+        .indicators-container {
+            text-align: center;
+            padding: 15px;
+            border-radius: 30px;
+            background: rgba(255, 255, 255, 0.9);
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            align-items: center;
+            justify-content: center;
+            width: 300px;
+            max-width: 300px;
         }
         .current-values {
             margin-bottom: 20px;
+        }
+        .current-values h2 {
+            font-size: 22px;
+            color: #333333;
+        }
+        .current-values .value-box {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            margin: 10px auto;
+            padding: 10px 20px;
+            border-radius: 12px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            font-size: 18px;
+            font-family: 'Roboto', sans-serif;
+            font-weight: 500;
+        }
+        .value-box span {
+            font-size: 24px;
+            font-weight: bold;
+        }
+        .value-co2 {
+            background: #E8F5E9;
+            color: #2E7D32;
+        }
+        .value-temperature {
+            background: #FFEBEE;
+            color: #C62828;
+        }
+        .value-humidity {
+            background: #E3F2FD;
+            color: #1565C0;
+        }
+        .indicator-box {
+            padding: 10px;
+            border-radius: 12px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            width: 140px;
+            margin: 0 auto;
+        }
+        .indicator-co2 {
+            background: #E8F5E9; /* Verde pastel */
+        }
+        .indicator-temperature {
+            background: #FFEBEE; /* Rojo pastel */
+        }
+        .indicator-humidity {
+            background: #E3F2FD; /* Azul pastel */
+        }
+        .indicator-box canvas {
+            width: 120px;
+            height: 120px;
         }
         .button-container {
             display: flex;
@@ -36,102 +113,116 @@
             gap: 20px;
         }
         .sensor-button {
-            background-color: #007BFF;
+            background-color: #90CAF9; /* Azul pastel más oscuro */
             border: none;
-            color: white;
+            color: #0D47A1; /* Azul oscuro */
             padding: 15px 32px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
             font-size: 16px;
-            margin: 4px 2px;
+            border-radius: 10px;
             cursor: pointer;
-            border-radius: 12px;
-            transition: background-color 0.3s;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
             display: flex;
             align-items: center;
             justify-content: center;
             gap: 10px;
             width: 100%;
             max-width: 250px;
+            transition: transform 0.3s, box-shadow 0.3s, background-color 0.3s;
+            font-family: 'Roboto', sans-serif;
+            font-weight: 500;
         }
         .sensor-button img {
             width: 30px;
         }
         .sensor-button:hover {
-            background-color: #0056b3;
+            transform: scale(1.03); /* Efecto de zoom suave */
+            background-color: #64B5F6; /* Azul pastel al pasar el cursor */
+            box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2);
         }
         .logout-button {
             position: absolute;
-            bottom: 20px; /* Coloca el botón en la parte inferior */
-            left: 20px; /* Coloca el botón en la parte izquierda */
-            background-color: #dc3545;
+            bottom: 20px;
+            left: 20px;
+            background: #C62828;
             border: none;
             padding: 10px;
-            border-radius: 5px;
+            border-radius: 50%;
             cursor: pointer;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s, box-shadow 0.3s;
+            width: 40px;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
         .logout-button img {
-            width: 20px; /* Ajusta el tamaño de la imagen */
+            width: 20px;
             height: auto;
         }
         .logout-button:hover {
-            background-color: #c82333;
-        }
-        @media (max-width: 600px) {
-            .sensor-button {
-                padding: 10px 20px;
-                font-size: 14px;
-            }
-            .sensor-button img {
-                width: 20px;
-            }
-            .container {
-                padding: 10px;
-            }
+            transform: scale(1.1);
+            box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Monitor de Calidad de Aire</h1>
-        <div class="current-values">
-            <h2>Valores Actuales</h2>
-            <p>CO2: <span id="co2-value">-</span> ppm</p>
-            <p>Temperatura: <span id="temperature-value">-</span> °C</p>
-            <p>Humedad: <span id="humidity-value">-</span> %</p>
+    <div class="main-container">
+        <!-- Panel principal -->
+        <div class="container">
+            <h1>Monitor de Calidad de Aire</h1>
+            <div class="current-values">
+                <h2>Valores Actuales</h2>
+                <div class="value-box value-co2">
+                    CO2: <span id="co2-value">-</span> ppm
+                </div>
+                <div class="value-box value-temperature">
+                    Temperatura: <span id="temperature-value">-</span> °C
+                </div>
+                <div class="value-box value-humidity">
+                    Humedad: <span id="humidity-value">-</span> %
+                </div>
+            </div>
+            <div class="button-container">
+                <button class="sensor-button" id="general-button">
+                    <img src="monitor/General.png" alt="General">
+                    General
+                </button>
+                <button class="sensor-button" id="co2-button">
+                    <img src="monitor/CO2.png" alt="CO2">
+                    CO2
+                </button>
+                <button class="sensor-button" id="temperature-button">
+                    <img src="monitor/Termometro.png" alt="Temperatura">
+                    Temperatura
+                </button>
+                <button class="sensor-button" id="humidity-button">
+                    <img src="monitor/Humedad.png" alt="Humedad">
+                    Humedad
+                </button>
+            </div>
+            <button class="logout-button" id="logoutButton">
+                <img src="monitor/OFF.png" alt="Cerrar sesión">
+            </button>
         </div>
-        <div class="button-container">
-            <button class="sensor-button" id="general-button">
-                <img src="monitor/General.png" alt="General">
-                General
-            </button>
-            <button class="sensor-button" id="co2-button">
-                <img src="monitor/CO2.png" alt="CO2">
-                CO2
-            </button>
-            <button class="sensor-button" id="temperature-button">
-                <img src="monitor/Termometro.png" alt="Termómetro">
-                Temperatura
-            </button>
-            <button class="sensor-button" id="humidity-button">
-                <img src="monitor/Humedad.png" alt="Humedad">
-                Humedad
-            </button>
+
+        <!-- Panel de indicadores -->
+        <div class="indicators-container">
+            <div class="indicator-box indicator-co2">
+                <canvas id="co2-meter"></canvas>
+                <p>CO2</p>
+            </div>
+            <div class="indicator-box indicator-temperature">
+                <canvas id="temperature-meter"></canvas>
+                <p>Temperatura</p>
+            </div>
+            <div class="indicator-box indicator-humidity">
+                <canvas id="humidity-meter"></canvas>
+                <p>Humedad</p>
+            </div>
         </div>
-        <button class="logout-button" id="logoutButton">
-            <img src="monitor\OFF.png" alt="Cerrar sesión"> <!-- Cambia esta ruta -->
-        </button>
     </div>
     <script>
-        // Verifica si el usuario ha iniciado sesión
-        window.onload = function() {
-            const loggedIn = localStorage.getItem('loggedInUser'); // Asegúrate de que la clave sea la correcta
-            if (!loggedIn) {
-                window.location.href = 'login.html'; // Redirigir a la página de inicio de sesión
-            }
-        };
-
         const scriptURL = 'https://script.google.com/macros/s/AKfycbzu-5j4yPIabA2P11vK8OdQIOy4QskWuP4-RVWL342CskZSV_hAx-CVC1r5YTc3v9RlSQ/exec';
 
         async function fetchData() {
@@ -144,47 +235,97 @@
             }
         }
 
-        function updateCurrentValues(data) {
+        const co2Meter = new Chart(document.getElementById('co2-meter'), {
+            type: 'doughnut',
+            data: {
+                datasets: [{
+                    data: [0, 100],
+                    backgroundColor: ['#4CAF50', '#E0E0E0']
+                }]
+            },
+            options: {
+                rotation: -90,
+                circumference: 180,
+                cutout: '75%',
+                plugins: {
+                    tooltip: { enabled: false },
+                    legend: { display: false }
+                }
+            }
+        });
+
+        const temperatureMeter = new Chart(document.getElementById('temperature-meter'), {
+            type: 'doughnut',
+            data: {
+                datasets: [{
+                    data: [0, 50],
+                    backgroundColor: ['#C62828', '#E0E0E0']
+                }]
+            },
+            options: {
+                rotation: -90,
+                circumference: 180,
+                cutout: '75%',
+                plugins: {
+                    tooltip: { enabled: false },
+                    legend: { display: false }
+                }
+            }
+        });
+
+        const humidityMeter = new Chart(document.getElementById('humidity-meter'), {
+            type: 'doughnut',
+            data: {
+                datasets: [{
+                    data: [0, 100],
+                    backgroundColor: ['#1565C0', '#E0E0E0'] /* Azul */
+                }]
+            },
+            options: {
+                rotation: -90,
+                circumference: 180,
+                cutout: '75%',
+                plugins: {
+                    tooltip: { enabled: false },
+                    legend: { display: false }
+                }
+            }
+        });
+
+        async function updateValues(data) {
             const latest = data[data.length - 1];
-            document.getElementById('co2-value').textContent = latest[1]; // Columna C
-            document.getElementById('temperature-value').textContent = latest[2]; // Columna D
-            document.getElementById('humidity-value').textContent = latest[3]; // Columna E
+            const co2Value = parseFloat(latest[1]).toFixed(2);
+            const tempValue = parseFloat(latest[2]).toFixed(2);
+            const humValue = parseFloat(latest[3]).toFixed(2);
+
+            document.getElementById('co2-value').textContent = co2Value;
+            document.getElementById('temperature-value').textContent = tempValue;
+            document.getElementById('humidity-value').textContent = humValue;
+
+            co2Meter.data.datasets[0].data = [co2Value, 100 - co2Value];
+            co2Meter.update();
+
+            temperatureMeter.data.datasets[0].data = [tempValue, 50 - tempValue];
+            temperatureMeter.update();
+
+            humidityMeter.data.datasets[0].data = [humValue, 100 - humValue];
+            humidityMeter.update();
         }
-
-        document.getElementById('general-button').addEventListener('click', () => {
-            window.location.href = 'general.html';
-        });
-        document.getElementById('co2-button').addEventListener('click', () => {
-            window.location.href = 'co2.html';
-        });
-        document.getElementById('temperature-button').addEventListener('click', () => {
-            window.location.href = 'temperatura.html';
-        });
-        document.getElementById('humidity-button').addEventListener('click', () => {
-            window.location.href = 'humedad.html';
-        });
-
-        // Manejo del cierre de sesión
-        document.getElementById('logoutButton').addEventListener('click', () => {
-            localStorage.removeItem('loggedInUser'); // Elimina el usuario guardado
-            window.location.href = 'login.html'; // Redirige al login
-        });
 
         async function init() {
             const data = await fetchData();
             if (data) {
-                updateCurrentValues(data);
+                updateValues(data);
             }
             setInterval(async () => {
                 const newData = await fetchData();
                 if (newData) {
-                    updateCurrentValues(newData);
+                    updateValues(newData);
                 }
-            }, 5000); // Actualiza cada 5 segundos
+            }, 5000);
         }
 
         init();
-
     </script>
 </body>
 </html>
