--- a/co2.html
+++ b/co2.html
@@ -171,7 +171,7 @@
                         datasets: [{
                             label: 'CO2 (PPM)',
                             data,
-                            borderColor: 'rgba(255, 0, 0, 1)', // Rojo
+                            borderColor: 'rgba(0, 204, 0, 1)', // Verde
                             borderWidth: 2,
                             fill: false
                         }]
