--- a/temperatura.html
+++ b/temperatura.html
@@ -14,25 +14,27 @@
             background-size: cover;
             background-position: center;
             display: flex;
-            justify-content: center;
-            align-items: flex-start;
+            justify-content: flex-start;
+            align-items: center;
             flex-direction: column;
-            padding-top: 10px;
+            height: 100%;
+            overflow-y: auto;
         }
+
         .title {
-            position: absolute;
-            top: 20px;
-            right: 20px;
             font-size: 28px;
             font-weight: bold;
-            color: white; /* Texto en blanco */
+            color: white;
+            margin-top: 20px;
+            text-align: center;
         }
+
         .back-button {
-            position: absolute;
+            position: fixed;
             top: 20px;
             left: 20px;
-            width: 60px;
-            height: 60px;
+            width: 50px;
+            height: 50px;
             background-color: white;
             border-radius: 50%;
             border: none;
@@ -40,64 +42,89 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            z-index: 10;
         }
+
         .back-button img {
-            width: 45px;
-            height: 45px;
+            width: 30px;
+            height: 30px;
         }
+
         .temp-container {
             display: flex;
             flex-direction: column;
-            width: 95%;
-            padding: 0 20px;
-            margin-top: 70px;
-            align-items: center;
+            gap: 20px;
+            width: 90%;
+            max-width: 1000px;
+            margin: 20px auto;
         }
+
         .temp-item {
             text-align: center;
-            margin-bottom: 30px;
-            font-size: 22px;
-            color: white; /* Color del texto en blanco */
-        }
-        .chart-container {
-            background-color: rgba(255, 255, 255, 0.8); /* Fondo blanco semi-transparente */
+            background: rgba(255, 255, 255, 0.9);
+            padding: 20px;
             border-radius: 20px;
-            padding: 30px;
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-            width: 100%; /* Ancho completo */
-            max-width: 1000px; /* Ancho máximo aumentado */
-            height: 500px; /* Altura fija del contenedor */
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+            position: relative;
         }
-        canvas {
-            max-height: 450px; /* Altura máxima aumentada */
-            width: 100% !important; /* Asegurar que el canvas ocupe todo el ancho */
+
+        .chart-container {
+            margin-top: 10px;
+        }
+
+        .chart-container canvas {
+            width: 100%;
+            max-height: 350px;
+        }
+
+        .download-button {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 14px;
+            font-weight: bold;
+            background-color: #6FB1FC; /* Azul pastel */
+            color: white;
+            border: none;
+            border-radius: 15px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            cursor: pointer;
+            transition: background-color 0.3s, transform 0.3s;
+        }
+
+        .download-button:hover {
+            background-color: #3F8FD2;
+            transform: scale(1.05);
         }
     </style>
 </head>
 <body>
-    <div class="title">Temperatura</div>
+    <div class="title">Monitor de Temperatura</div>
     <button class="back-button" onclick="history.back()">
-        <img src="monitor/flecha.png" alt="Flecha">
+        <img src="monitor/flecha.png" alt="Volver">
     </button>
-    
+
     <div class="temp-container">
         <div class="temp-item">
             <div id="tempDisplay1">Med1 Temp: -- °C</div>
             <div class="chart-container">
                 <canvas id="chart1"></canvas>
             </div>
+            <button class="download-button" onclick="downloadChart('chart1', 'Med1_Temperatura')">Descargar JPG</button>
         </div>
         <div class="temp-item">
             <div id="tempDisplay2">Med2 Temp: -- °C</div>
             <div class="chart-container">
                 <canvas id="chart2"></canvas>
             </div>
+            <button class="download-button" onclick="downloadChart('chart2', 'Med2_Temperatura')">Descargar JPG</button>
         </div>
         <div class="temp-item">
             <div id="tempDisplay3">Med3 Temp: -- °C</div>
             <div class="chart-container">
                 <canvas id="chart3"></canvas>
             </div>
+            <button class="download-button" onclick="downloadChart('chart3', 'Med3_Temperatura')">Descargar JPG</button>
         </div>
     </div>
 
@@ -105,7 +132,6 @@
         async function fetchData() {
             try {
                 const response = await fetch('https://script.google.com/macros/s/AKfycbzu-5j4yPIabA2P11vK8OdQIOy4QskWuP4-RVWL342CskZSV_hAx-CVC1r5YTc3v9RlSQ/exec');
-                if (!response.ok) throw new Error('Error al obtener los datos');
                 const data = await response.json();
                 return data;
             } catch (error) {
@@ -117,69 +143,68 @@
             const data = await fetchData();
             if (!data) return;
 
-            // Extraer datos de temperatura y fechas por medidor
-            const tempData1 = data.map(row => row[2]); // Temperatura Med1 (Columna 2)
-            const tempData2 = data.map(row => row[6]); // Temperatura Med2 (Columna 6)
-            const tempData3 = data.map(row => row[10]); // Temperatura Med3 (Columna 10)
+            const latestRow = data[data.length - 1];
+            const temp1 = latestRow[2] || 0;
+            const temp2 = latestRow[6] || 0;
+            const temp3 = latestRow[10] || 0;
 
-            // Fechas y horas de cada medidor
-            const datetimeData1 = data.map(row => row[0]); // Fecha y hora Med1 (Columna 0)
-            const datetimeData2 = data.map(row => row[4]); // Fecha y hora Med2 (Columna 4)
-            const datetimeData3 = data.map(row => row[8]); // Fecha y hora Med3 (Columna 8)
+            document.getElementById('tempDisplay1').innerText = `Med1 Temp: ${temp1} °C`;
+            document.getElementById('tempDisplay2').innerText = `Med2 Temp: ${temp2} °C`;
+            document.getElementById('tempDisplay3').innerText = `Med3 Temp: ${temp3} °C`;
 
-            // Actualizar los textos de temperatura
-            document.getElementById('tempDisplay1').innerText = `Med1 Temp: ${tempData1[tempData1.length - 1]} °C`;
-            document.getElementById('tempDisplay2').innerText = `Med2 Temp: ${tempData2[tempData2.length - 1]} °C`;
-            document.getElementById('tempDisplay3').innerText = `Med3 Temp: ${tempData3[tempData3.length - 1]} °C`;
-
-            // Crear gráficos usando las fechas correctas como etiquetas
-            createChart('chart1', datetimeData1, tempData1, 'Med1 Temp');
-            createChart('chart2', datetimeData2, tempData2, 'Med2 Temp');
-            createChart('chart3', datetimeData3, tempData3, 'Med3 Temp');
+            updateChart('chart1', data.map(row => row[0]), data.map(row => row[2]));
+            updateChart('chart2', data.map(row => row[4]), data.map(row => row[6]));
+            updateChart('chart3', data.map(row => row[8]), data.map(row => row[10]));
         }
 
-        function createChart(canvasId, labels, data, label) {
-            // Filtrar los datos y las etiquetas (fechas) para excluir los vacíos
-            const filteredData = data.map((value, index) => ({ value, label: labels[index] }))
-                                     .filter(entry => entry.value !== null && entry.value !== '' && entry.value !== undefined);
-
-            // Separar de nuevo las etiquetas y los valores filtrados
-            const filteredLabels = filteredData.map(entry => entry.label);
-            const filteredValues = filteredData.map(entry => entry.value);
-
+        function updateChart(canvasId, labels, data) {
             const ctx = document.getElementById(canvasId).getContext('2d');
-            new Chart(ctx, {
-                type: 'line',
-                data: {
-                    labels: filteredLabels,
-                    datasets: [{
-                        label: label,
-                        data: filteredValues,
-                        borderColor: 'rgba(255, 0, 0, 1)', // Color rojo
-                        borderWidth: 2, // Grosor de la línea
-                        fill: false
-                    }]
-                },
-                options: {
-                    responsive: true,
-                    maintainAspectRatio: false, // Permitir que el gráfico cambie de tamaño
-                    scales: {
-                        x: {
-                            title: {
-                                display: true,
-                                text: 'Fecha y Hora'
-                            }
-                        },
-                        y: {
-                            beginAtZero: true,
-                            title: {
-                                display: true,
-                                text: 'Temperatura (°C)'
+            if (ctx.chart) {
+                ctx.chart.data.labels = labels;
+                ctx.chart.data.datasets[0].data = data;
+                ctx.chart.update();
+            } else {
+                ctx.chart = new Chart(ctx, {
+                    type: 'line',
+                    data: {
+                        labels,
+                        datasets: [{
+                            label: 'Temperatura (°C)',
+                            data,
+                            borderColor: 'rgba(255, 0, 0, 1)', // Color rojo
+                            borderWidth: 2,
+                            fill: false
+                        }]
+                    },
+                    options: {
+                        responsive: true,
+                        maintainAspectRatio: false,
+                        scales: {
+                            x: {
+                                title: {
+                                    display: true,
+                                    text: 'Fecha y Hora'
+                                }
+                            },
+                            y: {
+                                beginAtZero: true,
+                                title: {
+                                    display: true,
+                                    text: 'Temperatura (°C)'
+                                }
                             }
                         }
                     }
-                }
-            });
+                });
+            }
+        }
+
+        function downloadChart(canvasId, fileName) {
+            const canvas = document.getElementById(canvasId);
+            const link = document.createElement('a');
+            link.href = canvas.toDataURL('image/jpeg', 1.0);
+            link.download = `${fileName}.jpg`;
+            link.click();
         }
 
         setInterval(updateTempDisplay, 5000);
