--- a/general.html
+++ b/general.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>General</title>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&family=Roboto:wght@300;500&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Space Grotesk', sans-serif;
@@ -19,22 +19,63 @@
             flex-direction: column;
             height: 100vh;
         }
+
         .main-container {
-            text-align: center;
-            padding: 20px;
-            border-radius: 20px;
             background: rgba(255, 255, 255, 0.9);
+            border-radius: 20px;
+            padding: 20px;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
             max-width: 900px;
             width: 90%;
+            text-align: center;
         }
+
         .title {
             font-size: 28px;
             color: #333333;
             margin-bottom: 20px;
         }
+
+        .button-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 15px;
+            margin: 20px 0;
+        }
+
+        button {
+            padding: 12px 20px;
+            font-size: 16px;
+            border: none;
+            border-radius: 20px;
+            cursor: pointer;
+            background: #64B5F6;
+            color: white;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            transition: transform 0.2s, background 0.3s;
+        }
+
+        button:hover {
+            background: #42A5F5;
+            transform: scale(1.05);
+            box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .chart-container {
+            background: rgba(248, 249, 250, 0.9);
+            padding: 20px;
+            border-radius: 20px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        canvas {
+            width: 100%;
+            max-height: 400px;
+        }
+
         .back-button {
-            position: absolute;
+            position: fixed;
             top: 20px;
             left: 20px;
             width: 50px;
@@ -46,48 +87,65 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         }
+
         .back-button img {
             width: 30px;
             height: 30px;
         }
-        .button-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 15px;
-            margin: 20px 0;
-        }
-        button {
-            padding: 12px 20px;
-            font-size: 16px;
-            border: none;
-            border-radius: 20px;
-            cursor: pointer;
-            background: #64B5F6; /* Azul pastel */
-            color: white;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            transition: transform 0.2s, background 0.3s;
-        }
-        button:hover {
-            background: #42A5F5;
-            transform: scale(1.05);
-            box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2);
-        }
-        .chart-container {
-            background: rgba(248, 249, 250, 0.9);
-            padding: 20px;
-            border-radius: 20px;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-        }
-        canvas {
+
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
             width: 100%;
-            max-height: 400px;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+            text-align: center;
+        }
+
+        .modal-content p {
+            font-size: 18px;
+            margin-bottom: 20px;
+        }
+
+        .modal-content button {
+            padding: 10px 20px;
+            font-size: 16px;
+            background: #64B5F6;
+            border: none;
+            border-radius: 10px;
+            color: white;
+            cursor: pointer;
+        }
+
+        .modal-content button:hover {
+            background: #42A5F5;
         }
     </style>
 </head>
 <body>
+    <!-- Modal de advertencia -->
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <p>Acceso restringido. Por favor, inicia sesión para continuar.</p>
+            <button id="redirectLogin">Ir al Login</button>
+        </div>
+    </div>
+
+    <!-- Botón para regresar -->
     <button class="back-button" onclick="history.back()">
         <img src="monitor/flecha.png" alt="Regresar">
     </button>
@@ -109,92 +167,76 @@
     <script>
         let currentChart;
 
-        async function fetchData() {
-            try {
-                const response = await fetch('https://script.google.com/macros/s/AKfycbzu-5j4yPIabA2P11vK8OdQIOy4QskWuP4-RVWL342CskZSV_hAx-CVC1r5YTc3v9RlSQ/exec');
-                if (!response.ok) throw new Error('Error al obtener los datos');
-                const data = await response.json();
-                return data;
-            } catch (error) {
-                console.error('Error fetching data:', error);
+        // Verificar si el usuario ha iniciado sesión
+        document.addEventListener('DOMContentLoaded', () => {
+            const loggedInUser = localStorage.getItem('loggedInUser');
+            const modal = document.getElementById('modal');
+            const redirectLogin = document.getElementById('redirectLogin');
+
+            if (!loggedInUser || loggedInUser === 'guest') {
+                modal.style.display = 'flex';
+                redirectLogin.addEventListener('click', () => {
+                    window.location.href = 'login.html';
+                });
+                setTimeout(() => {
+                    window.location.href = 'login.html';
+                }, 5000);
             }
-        }
+        });
 
-        function calculateAverages(data) {
-            const averages = data.map(row => {
-                const co2Values = [row[1], row[5], row[9]].filter(value => value !== null && value !== undefined && value !== '');
-                const tempValues = [row[2], row[6], row[10]].filter(value => value !== null && value !== undefined && value !== '');
-                const humidityValues = [row[3], row[7], row[11]].filter(value => value !== null && value !== undefined && value !== '');
-
-                const co2Avg = co2Values.length ? co2Values.reduce((a, b) => a + b, 0) / co2Values.length : null;
-                const tempAvg = tempValues.length ? tempValues.reduce((a, b) => a + b, 0) / tempValues.length : null;
-                const humidityAvg = humidityValues.length ? humidityValues.reduce((a, b) => a + b, 0) / humidityValues.length : null;
-
-                return {
-                    datetime: row[0],
-                    co2Avg,
-                    tempAvg,
-                    humidityAvg
-                };
-            });
-            return averages;
+        async function fetchData() {
+            const response = await fetch('https://script.google.com/macros/s/AKfycbzu-5j4yPIabA2P11vK8OdQIOy4QskWuP4-RVWL342CskZSV_hAx-CVC1r5YTc3v9RlSQ/exec');
+            const data = await response.json();
+            return data;
         }
 
         async function loadChart(type) {
             const data = await fetchData();
             if (!data) return;
 
-            const averages = calculateAverages(data);
-            const labels = averages.map(entry => entry.datetime);
-
+            const labels = data.map(row => row[0]);
             let datasets = [];
 
             if (type === 'co2') {
-                datasets.push({
-                    label: 'Promedio CO2 (ppm)',
-                    data: averages.map(entry => entry.co2Avg),
-                    borderColor: 'rgba(255, 0, 0, 1)',
-                    borderWidth: 2,
-                    fill: false
-                });
+                datasets = [{
+                    label: 'CO2 (ppm)',
+                    data: data.map(row => row[1]),
+                    borderColor: 'rgba(0, 204, 0, 1)', // Verde
+                    borderWidth: 2
+                }];
             } else if (type === 'temperature') {
-                datasets.push({
-                    label: 'Promedio Temperatura (°C)',
-                    data: averages.map(entry => entry.tempAvg),
-                    borderColor: 'rgba(0, 0, 255, 1)',
-                    borderWidth: 2,
-                    fill: false
-                });
+                datasets = [{
+                    label: 'Temperatura (°C)',
+                    data: data.map(row => row[2]),
+                    borderColor: 'rgba(255, 0, 0, 1)', // Rojo
+                    borderWidth: 2
+                }];
             } else if (type === 'humidity') {
-                datasets.push({
-                    label: 'Promedio Humedad (%)',
-                    data: averages.map(entry => entry.humidityAvg),
-                    borderColor: 'rgba(0, 255, 0, 1)',
-                    borderWidth: 2,
-                    fill: false
-                });
+                datasets = [{
+                    label: 'Humedad (%)',
+                    data: data.map(row => row[3]),
+                    borderColor: 'rgba(0, 0, 255, 1)', // Azul
+                    borderWidth: 2
+                }];
             } else if (type === 'general') {
                 datasets = [
                     {
-                        label: 'Promedio CO2 (ppm)',
-                        data: averages.map(entry => entry.co2Avg),
+                        label: 'CO2 (ppm)',
+                        data: data.map(row => row[1]),
+                        borderColor: 'rgba(0, 204, 0, 1)',
+                        borderWidth: 2
+                    },
+                    {
+                        label: 'Temperatura (°C)',
+                        data: data.map(row => row[2]),
                         borderColor: 'rgba(255, 0, 0, 1)',
-                        borderWidth: 2,
-                        fill: false
+                        borderWidth: 2
                     },
                     {
-                        label: 'Promedio Temperatura (°C)',
-                        data: averages.map(entry => entry.tempAvg),
+                        label: 'Humedad (%)',
+                        data: data.map(row => row[3]),
                         borderColor: 'rgba(0, 0, 255, 1)',
-                        borderWidth: 2,
-                        fill: false
-                    },
-                    {
-                        label: 'Promedio Humedad (%)',
-                        data: averages.map(entry => entry.humidityAvg),
-                        borderColor: 'rgba(0, 255, 0, 1)',
-                        borderWidth: 2,
-                        fill: false
+                        borderWidth: 2
                     }
                 ];
             }
@@ -212,8 +254,8 @@
             currentChart = new Chart(ctx, {
                 type: 'line',
                 data: {
-                    labels: labels,
-                    datasets: datasets
+                    labels,
+                    datasets
                 },
                 options: {
                     responsive: true,
@@ -229,7 +271,7 @@
                             beginAtZero: true,
                             title: {
                                 display: true,
-                                text: 'Valor Promedio'
+                                text: 'Valores'
                             }
                         }
                     }
@@ -239,17 +281,8 @@
 
         function downloadJPG() {
             const canvas = document.getElementById('generalChart');
-            const tempCanvas = document.createElement('canvas');
-            tempCanvas.width = canvas.width;
-            tempCanvas.height = canvas.height;
-
-            const ctx = tempCanvas.getContext('2d');
-            ctx.fillStyle = 'white'; // Fondo blanco
-            ctx.fillRect(0, 0, tempCanvas.width, tempCanvas.height);
-            ctx.drawImage(canvas, 0, 0);
-
             const link = document.createElement('a');
-            link.href = tempCanvas.toDataURL('image/jpeg', 1.0);
+            link.href = canvas.toDataURL('image/jpeg', 1.0);
             link.download = 'grafico_general.jpg';
             link.click();
         }
