--- a/humedad.html
+++ b/humedad.html
@@ -14,25 +14,27 @@
             background-size: cover;
             background-position: center;
             display: flex;
-            justify-content: center;
-            align-items: flex-start;
+            justify-content: flex-start;
+            align-items: center;
             flex-direction: column;
-            padding-top: 10px;
+            height: 100%;
+            overflow-y: auto;
         }
+
         .title {
-            position: absolute;
-            top: 20px;
-            right: 20px;
             font-size: 28px;
             font-weight: bold;
-            color: white; /* Color blanco para que destaque sobre el fondo */
+            color: white;
+            margin-top: 20px;
+            text-align: center;
         }
+
         .back-button {
-            position: absolute;
+            position: fixed;
             top: 20px;
             left: 20px;
-            width: 60px;
-            height: 60px;
+            width: 50px;
+            height: 50px;
             background-color: white;
             border-radius: 50%;
             border: none;
@@ -40,145 +42,173 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            z-index: 10;
         }
+
         .back-button img {
-            width: 45px;
-            height: 45px;
+            width: 30px;
+            height: 30px;
         }
+
         .humidity-container {
             display: flex;
             flex-direction: column;
-            width: 95%;
-            padding: 0 20px;
-            margin-top: 70px;
-            align-items: center;
+            gap: 20px;
+            width: 90%;
+            max-width: 1000px;
+            margin: 20px auto;
         }
+
         .humidity-item {
             text-align: center;
-            margin-bottom: 30px;
-            font-size: 22px;
-            color: white; /* Color del texto */
-        }
-        .chart-container {
-            background-color: rgba(255, 255, 255, 0.8); /* Fondo blanco semi-transparente */
+            background: rgba(255, 255, 255, 0.9);
+            padding: 20px;
             border-radius: 20px;
-            padding: 30px;
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-            width: 100%;
-            max-width: 1000px; /* Ancho máximo aumentado */
-            height: 500px; /* Altura fija del contenedor */
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+            position: relative;
         }
-        canvas {
-            max-height: 450px; /* Altura máxima aumentada */
-            width: 100% !important; /* Asegurar que el canvas ocupe todo el ancho */
+
+        .chart-container {
+            margin-top: 10px;
+        }
+
+        .chart-container canvas {
+            width: 100%;
+            max-height: 350px;
+        }
+
+        .download-button {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 14px;
+            font-weight: bold;
+            background-color: #6FB1FC; /* Azul pastel */
+            color: white;
+            border: none;
+            border-radius: 15px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            cursor: pointer;
+            transition: background-color 0.3s, transform 0.3s;
+        }
+
+        .download-button:hover {
+            background-color: #3F8FD2; /* Azul más oscuro al pasar */
+            transform: scale(1.05);
         }
     </style>
 </head>
 <body>
-    <div class="title">Humedad</div>
+    <div class="title">Monitor de Humedad</div>
     <button class="back-button" onclick="history.back()">
-        <img src="monitor/flecha.png" alt="Flecha">
+        <img src="monitor/flecha.png" alt="Volver">
     </button>
-    
+
     <div class="humidity-container">
         <div class="humidity-item">
             <div id="humidityDisplay1">Med1 Humedad: -- %</div>
             <div class="chart-container">
                 <canvas id="chart1"></canvas>
             </div>
+            <button class="download-button" onclick="downloadChart('chart1', 'Med1_Humedad')">Descargar JPG</button>
         </div>
         <div class="humidity-item">
             <div id="humidityDisplay2">Med2 Humedad: -- %</div>
             <div class="chart-container">
                 <canvas id="chart2"></canvas>
             </div>
+            <button class="download-button" onclick="downloadChart('chart2', 'Med2_Humedad')">Descargar JPG</button>
         </div>
         <div class="humidity-item">
             <div id="humidityDisplay3">Med3 Humedad: -- %</div>
             <div class="chart-container">
                 <canvas id="chart3"></canvas>
             </div>
+            <button class="download-button" onclick="downloadChart('chart3', 'Med3_Humedad')">Descargar JPG</button>
         </div>
     </div>
 
     <script>
         async function fetchData() {
-            const response = await fetch('https://script.google.com/macros/s/AKfycbzu-5j4yPIabA2P11vK8OdQIOy4QskWuP4-RVWL342CskZSV_hAx-CVC1r5YTc3v9RlSQ/exec');
-            const data = await response.json();
-            return data;
+            try {
+                const response = await fetch('https://script.google.com/macros/s/AKfycbzu-5j4yPIabA2P11vK8OdQIOy4QskWuP4-RVWL342CskZSV_hAx-CVC1r5YTc3v9RlSQ/exec');
+                const data = await response.json();
+                return data;
+            } catch (error) {
+                console.error('Error fetching data:', error);
+            }
         }
 
         async function updateHumidityDisplay() {
             const data = await fetchData();
-            const latestRow = data[data.length - 1];
+            if (!data) return;
 
-            const humidity_1 = latestRow[3];
-            const humidity_2 = latestRow[7];
-            const humidity_3 = latestRow[11];
+            const latestRow = data[data.length - 1];
+            const humidity_1 = latestRow[3] || 0;
+            const humidity_2 = latestRow[7] || 0;
+            const humidity_3 = latestRow[11] || 0;
 
             document.getElementById('humidityDisplay1').innerText = `Med1 Humedad: ${humidity_1} %`;
             document.getElementById('humidityDisplay2').innerText = `Med2 Humedad: ${humidity_2} %`;
             document.getElementById('humidityDisplay3').innerText = `Med3 Humedad: ${humidity_3} %`;
 
-            // Usar las columnas correctas para las etiquetas de fecha y hora en cada medidor
-            const datetimeData1 = data.map(row => row[0]); // Fecha y hora de Med1 (Columna 0)
-            const datetimeData2 = data.map(row => row[4]); // Fecha y hora de Med2 (Columna 4)
-            const datetimeData3 = data.map(row => row[8]); // Fecha y hora de Med3 (Columna 8)
-
-            // Crear gráficos, filtrando datos vacíos
-            createChart('chart1', datetimeData1, data.map(row => row[3]), 'Med1 Humedad');
-            createChart('chart2', datetimeData2, data.map(row => row[7]), 'Med2 Humedad');
-            createChart('chart3', datetimeData3, data.map(row => row[11]), 'Med3 Humedad');
+            updateChart('chart1', data.map(row => row[0]), data.map(row => row[3]));
+            updateChart('chart2', data.map(row => row[4]), data.map(row => row[7]));
+            updateChart('chart3', data.map(row => row[8]), data.map(row => row[11]));
         }
 
-        function createChart(canvasId, labels, data, label) {
-            // Filtrar los datos y las etiquetas (fechas) para excluir los vacíos
-            const filteredData = data.map((value, index) => ({ value, label: labels[index] }))
-                                     .filter(entry => entry.value !== null && entry.value !== '' && entry.value !== undefined);
-
-            // Separar de nuevo las etiquetas y los valores filtrados
-            const filteredLabels = filteredData.map(entry => entry.label);
-            const filteredValues = filteredData.map(entry => entry.value);
-
+        function updateChart(canvasId, labels, data) {
             const ctx = document.getElementById(canvasId).getContext('2d');
-            new Chart(ctx, {
-                type: 'line',
-                data: {
-                    labels: filteredLabels,
-                    datasets: [{
-                        label: label,
-                        data: filteredValues,
-                        borderColor: 'rgba(0, 0, 139, 1)', // Color azul
-                        borderWidth: 2,
-                        fill: false
-                    }]
-                },
-                options: {
-                    responsive: true,
-                    maintainAspectRatio: false, // Permitir que el gráfico cambie de tamaño
-                    scales: {
-                        x: {
-                            title: {
-                                display: true,
-                                text: 'Fecha y Hora'
-                            }
-                        },
-                        y: {
-                            beginAtZero: true,
-                            title: {
-                                display: true,
-                                text: 'Humedad (%)'
+            if (ctx.chart) {
+                ctx.chart.data.labels = labels;
+                ctx.chart.data.datasets[0].data = data;
+                ctx.chart.update();
+            } else {
+                ctx.chart = new Chart(ctx, {
+                    type: 'line',
+                    data: {
+                        labels,
+                        datasets: [{
+                            label: 'Humedad (%)',
+                            data,
+                            borderColor: 'rgba(0, 0, 255, 1)', // Azul
+                            borderWidth: 2,
+                            fill: false
+                        }]
+                    },
+                    options: {
+                        responsive: true,
+                        maintainAspectRatio: false,
+                        scales: {
+                            x: {
+                                title: {
+                                    display: true,
+                                    text: 'Fecha y Hora'
+                                }
+                            },
+                            y: {
+                                beginAtZero: true,
+                                title: {
+                                    display: true,
+                                    text: 'Humedad (%)'
+                                }
                             }
                         }
                     }
-                }
-            });
+                });
+            }
+        }
+
+        function downloadChart(canvasId, fileName) {
+            const canvas = document.getElementById(canvasId);
+            const link = document.createElement('a');
+            link.href = canvas.toDataURL('image/jpeg', 1.0);
+            link.download = `${fileName}.jpg`;
+            link.click();
         }
 
         setInterval(updateHumidityDisplay, 5000);
         updateHumidityDisplay();
-
- 
     </script>
 </body>
 </html>
